# perplexity-webui-scraper

./: .gitignore  AGENTS.md  DEBUG_GUIDE.md  README.md  api_client.py  debug_demo.py  file_logging_example.py  pyproject.toml  test.py  test_models.py  test_small.py
convert/: Readme.md  pdf_img.py
data/: 1.jsonl  old.jsonl  process_research_reports.py  sap_question.jsonl  sap_question_processed.jsonl  sap_question_test.jsonl  test_speach.py
qa/: AGENT_INTEGRATION_SUMMARY.md  HCMS_AGENT_MAPPING.md  HCMS_IMPLEMENTATION_REPORT.md  HCMS_PROMPT_UPDATES.md  PROMPT_PLACEHOLDER_FIX.md  QWEN.md  README.md  debate_20251018_184137.txt  debate_dual_api.py  generate_wricef_prompts.py  loader.py  new.json  packaged.txt  test_hcms_prompts.py  test_small.py
qa/backup/: test_small copy.py
qa/data/: 1.jsonl  sap_question.jsonl
qa/debate/: README.md  __init__.py  __main__.py  agents.py  cli.py  clients.py  core.py  prompts.py
qa/pplx_harness/: E027.txt  __init__.py  __main__.py  cli.py  config.py  constants.py  test.txt  types.py
qa/tests/: test_generate_wricef_prompts.py  test_pipeline_smoke.py  test_prompt_build.py  test_sanitize_limitations.py  test_validate_record.py
qa/transcripts/: debate_20251018_183259.txt  debate_20251018_183817.txt  debate_20251018_184137.txt  debate_20251018_185051.txt  debate_20251019_055016.txt  debate_20251019_055647.txt  debate_20251019_055740.txt  debate_20251019_060031.txt  debate_20251019_061027.txt  debate_20251019_061634.txt  debate_20251019_061912.txt  debate_20251019_063326.txt  debate_20251019_064033.txt  debate_20251019_064109.txt  (+178 more)
(+125 files in other folders)
